Hecho hasta el api.append de la densidad

--- a/views/menu.xml
+++ b/views/menu.xml
@@ -1,6 +1,7 @@
 <odoo>
     <data>
         <menuitem id="main_odoo_basico" name="Menu Nivel 0. Informacion basico  "/>
-        <menuitem id="menu_informacion" name="Menu Nivel 1." parent="main_odoo_basico" action="informacion_list_action"/>
+        <menuitem id="menu_informacion" name="Menu Nivel 1 de informacion." parent="main_odoo_basico" action="informacion_list_action"/>
+        <menuitem id="menu_suceso" name="Menu Nivel 1 de suceso." parent="main_odoo_basico" action="suceso_list_action"/>
     </data>
 </odoo>
